fix(pk-portfolio): modified ui component Card, set max-height value to avoid vertical image overflow & updated figma-icon file.

--- a/apps/pk-portfolio/src/scss/components/_card.scss
+++ b/apps/pk-portfolio/src/scss/components/_card.scss
@@ -14,10 +14,14 @@
     height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: #f6f8fa;
     text-align: center;
 
-    & > svg { width: 120px; }
+    & > svg {
+      max-height: 115px;
+      width: 120px;
+    }
   }
 
   & > div:last-of-type {
